<?xml version="1.0"?>
<package format="2">
  <name>uav_detect</name>
  <version>1.0.0</version>
  <description>Package for detection of UAVs from camera image</description>
  <license>MIT</license>

  <maintainer email="vrbamato@fel.cvut.cz">Matouš Vrba</maintainer>
  <author email="vrbamato@fel.cvut.cz">Matouš Vrba</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>libopencv-dev</depend>
  <depend>mrs_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>image_geometry</depend>
  <depend>nav_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>mrs_lib</depend>
  <depend>nodelet</depend>

  <export>
    <nodelet plugin="${prefix}/depth_detector_nodelet.xml" />

    generate_messages_cpp
  </export>
</package>
